--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,6 +83,12 @@ services:
       - n8n_storage:/home/node/.n8n
       - ./n8n/backup:/backup
       - ./shared:/data/shared
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.n8n.rule=Host('n8n.home-cloud.uk')"
+      - "traefik.http.routers.n8n.entrypoints=websecure"
+      - "traefik.http.services.n8n.loadbalancer.server.port=5678"
+      - "traefik.http.routers.n8n.tls=true"
     depends_on:
       postgres:
         condition: service_healthy
