--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,7 +85,7 @@ services:
       - ./shared:/data/shared
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.n8n.rule=Host('n8n.home-cloud.uk')"
+      - "traefik.http.routers.n8n.rule=Host('n8n.lab.home-cloud.uk')"
       - "traefik.http.routers.n8n.entrypoints=websecure"
       - "traefik.http.services.n8n.loadbalancer.server.port=5678"
       - "traefik.http.routers.n8n.tls=true"
