--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -102,15 +102,14 @@ services:
     restart: always
     depends_on:
       - ollama-gpu  # Ensure ollama-gpu starts first
-    ports:
-      - "3000:8080"  # Expose port 8080 in the container to port 3000 on the host
     volumes:
       - open-webui:/app/backend/data
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.chat.rule=Host(`chat.lab.home-cloud.uk`)"
       - "traefik.http.routers.chat.entrypoints=websecure"
-      - "traefik.http.services.chat.loadbalancer.server.port=3000"  
-      - "traefik.http.routers.chat.tls=true"
+      - "traefik.http.services.chat.loadbalancer.server.port=8080"  # Use container's internal port
+      - "traefik.http.routers.chat.tls=true"  # Enable HTTPS without specifying a certresolver
     environment:
       OLLAMA_BASE_URL: http://ollama-gpu:11434  # Connect to the ollama-gpu container by name
+  
